# winterbaume

./: .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASE.md  SECURITY.md  mise.toml  release-plan-overrides.toml
crates/winterbaume-acm/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-acm/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-acm/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-acmpca/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-acmpca/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-acmpca/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-applicationsignals/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-applicationsignals/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-applicationsignals/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-apprunner/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-apprunner/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-apprunner/tests/: integration_test.rs
crates/winterbaume-bedrock-flow-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-bedrock-flow-parser/src/: error.rs  lib.rs  parse.rs  types.rs
crates/winterbaume-bedrock-flow-validator/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-bedrock-flow-validator/src/: lib.rs
crates/winterbaume-bedrockagent/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-bedrockagent/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-bedrockagent/tests/: integration_test.rs
crates/winterbaume-cloudcontrol/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-cloudcontrol/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-cloudcontrol/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-cloudwatch/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-cloudwatch/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-cloudwatch/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-connect/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-connect/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-connect/tests/: integration_test.rs
crates/winterbaume-connectparticipant/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-connectparticipant/src/: handlers.rs  lib.rs  model.rs  state.rs  views.rs  wire.rs
crates/winterbaume-connectparticipant/tests/: integration_test.rs
crates/winterbaume-core/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-core/src/: auth.rs  blob_store.rs  lib.rs  mock_aws.rs  mock_client.rs  service.rs  state.rs  vfs.rs  views.rs
crates/winterbaume-core/tests/: default_account_id.rs
crates/winterbaume-costandusagereport/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-costandusagereport/src/: handlers.rs  lib.rs  model.rs  state.rs  views.rs  wire.rs
crates/winterbaume-costandusagereport/tests/: integration_test.rs
crates/winterbaume-datasync/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-datasync/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-datasync/tests/: integration_test.rs
crates/winterbaume-dsql/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-dsql/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-dsql/tests/: integration_test.rs
crates/winterbaume-dynamodb/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-dynamodb-redis/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-dynamodb-redis/src/: lib.rs
crates/winterbaume-dynamodb/src/: backend.rs  expr.rs  handlers.rs  lib.rs  model.rs  partiql_exec.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-dynamodb/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-dynamodbstreams/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-dynamodbstreams/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-dynamodbstreams/tests/: integration_test.rs
crates/winterbaume-e2e-tests/: Cargo.toml
crates/winterbaume-e2e-tests/src/: lib.rs
crates/winterbaume-ebs/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-ebs/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-ebs/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-ec2/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-ec2/src/: handlers.rs  lib.rs  state.rs  types.rs  views.rs
crates/winterbaume-ec2/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-ecr/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-ecr/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-ecr/tests/: integration_test.rs  scenario_test.rs
crates/winterbaume-fis/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-fis/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-fis/tests/: integration_test.rs
crates/winterbaume-glue/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-glue/src/: handlers.rs  lib.rs  model.rs  state.rs  types.rs  views.rs  wire.rs
crates/winterbaume-glue/tests/: integration_test.rs
crates/winterbaume-greengrass/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-greengrass/src/: handlers.rs  (+6 more)
crates/winterbaume-iam/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-iam-rule-eval/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-ivs/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-keyspaces/: CHANGELOG.md  Cargo.toml  README.md
crates/winterbaume-kinesis/: CHANGELOG.md  Cargo.toml  README.md
(+3866 files in other folders)
