[package]
name = "winterbaume-bedrock-flow-parser"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "README.md"
description = "Bedrock Agent flow definition JSON parser — converts serde_json::Value into a typed FlowDefinition AST"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
