[package]
name = "winterbaume-bedrock-flow-validator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Bedrock Agent flow definition validator over a parsed FlowDefinition AST"

[dependencies]
winterbaume-bedrock-flow-parser = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
