[package]
name = "winterbaume-cloudcontrol"
version = "1.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["aws", "mock", "testing", "cloudcontrol"]
readme = "README.md"
description = "Cloud Control API service implementation for winterbaume"

[dependencies]
winterbaume-core = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true, features = ["test-util"] }
aws-sdk-cloudcontrol = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
