[package]
name = "winterbaume-cloudwatch"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["aws", "mock", "testing", "cloudwatch"]
readme = "README.md"
description = "CloudWatch service implementation for winterbaume"

[dependencies]
winterbaume-core = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
quick-xml = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true, features = ["test-util"] }
aws-sdk-cloudwatch = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
