[package]
name = "winterbaume-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core library for winterbaume - AWS service mocking for Rust"

[features]
smithy-mocks = ["dep:aws-smithy-mocks"]

[dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true, features = ["test-util"] }
aws-smithy-mocks = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, features = ["client", "http-02x"] }
aws-smithy-types = { workspace = true }

tokio = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
