[package]
name = "winterbaume-dynamodb-redis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "README.md"
description = "Redis-backed DynamoDB storage backend for winterbaume"

[dependencies]
winterbaume-dynamodb = { workspace = true }
redis = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
