[package]
name = "winterbaume-dynamodbstreams"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["aws", "mock", "testing", "dynamodbstreams"]
readme = "README.md"
description = "Amazon DynamoDB Streams service implementation for winterbaume"

[dependencies]
winterbaume-core = { workspace = true }
winterbaume-dynamodb = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true, features = ["test-util"] }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-dynamodbstreams = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
