[package]
name = "winterbaume-iam-rule-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "README.md"
description = "IAM policy evaluation engine for winterbaume"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
