[package]
name = "winterbaume-iam"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["aws", "mock", "testing", "iam"]
readme = "README.md"
description = "IAM service implementation for winterbaume"

[dependencies]
winterbaume-core = { workspace = true }
winterbaume-iam-rule-eval = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true, features = ["test-util"] }
aws-sdk-iam = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
winterbaume-sts = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
