[package]
name = "winterbaume-kinesis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "README.md"
description = "Kinesis service implementation for winterbaume"

[dependencies]
winterbaume-core = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
num-bigint = "0.4"
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true, features = ["test-util"] }
aws-sdk-kinesis = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
